separator in infobox

--- a/app/src/main/res/layout/activity_choices.xml
+++ b/app/src/main/res/layout/activity_choices.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="16dp"><!-- Joyful Mysteries Section -->
+            android:paddingBottom="32dp"><!-- Joyful Mysteries Section -->
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -377,6 +377,7 @@
         android:orientation="horizontal"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
